Added interactive tutorial

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Шашки</title>
     <script src="suica.min.js"></script>
     <script src="script.js"></script>
+    <script src="tutorial.js"></script>
     <script src="https://kit.fontawesome.com/5c9473fc67.js" crossorigin="anonymous"></script>
     <script>
     window.addEventListener('load', function() {
