--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- Tutorial view -->
     <div id="tutorial-view">
-      <canvas id="suica_canvas" width="1190" height="640"></canvas>
+      <canvas id="suica_canvas" width="1190" height="640" class="disabled"></canvas>
       <div class="tutorial-instructions">
         <h2>Указания</h2>
         <p id="instruction">
