--- a/help.html
+++ b/help.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="navbar" role="navigation">
-      <span class="logo">Шашки</span>
+      <span class="logo"><a href="./index.html">Шашки</a></span>
       <div class="links">
         <a href="index.html" aria-label="Начало" class="nav-link home-link">Начало</a>
         <a href="index.html#about-game-view" aria-label="История на играта" class="nav-link about-game-link">История на играта</a>
