--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Navbar -->
     <div class="navbar" role="navigation">
-      <span class="logo">Шашки</span>
+      <span class="logo"><a href="./index.html">Шашки</a></span>
       <div class="links">
         <a href="#" aria-label="Начало" class="nav-link home-link">Начало</a>
         <a href="#about-game-view" aria-label="История на играта" class="nav-link about-game-link">История на играта</a>
@@ -82,10 +82,6 @@
           Първи на ход са белите фигури.
         </p>
         <button id="next-btn" onclick="next()">Напред</button>
-        <br>
-        <label>
-          <input type="checkbox" onchange="toggleRotation()" id="check">Автоматично завъртане
-        </label>
       </div>
     </div>
     <div id="to-board-view" role="main">
