Added help page markup and styles. Images to be added

--- a/help.html
+++ b/help.html
@@ -21,7 +21,22 @@
       </div>
     </div>
     <div id="help-view">
-
+      <h1>Шашки</h1>
+      <h2>Ръководство за потребителя</h2>
+      <h3>Начин на инсталиране</h3>
+      <p>Образователният софтуер “Шашки” е под формата на уебсайт с HTML страници. Единственото изискване е наличието на съвременен браузър като например тези, базирани на Chromium web engine, и Firefox.</p>
+      <p>Проектът може да бъде стартиран чрез отваряне на страницата index.html в папката Checkers.</p>
+      <h3>Навигация в страниците</h3>
+      <p>Началната страница на уебсайта позволява навигация до всяка от основните секции и функционалности на системата - История на играта, Правила на играта, Игра с приятел, Смяна на темата и Помощ.</p>
+      <p>Можете да достъпите всяка секция на системата по всяко време от фиксираната лента за навигация. </p>
+      <h3>Преглед на историята на играта</h3>
+      <p>Системата позволява преглед на историята на играта чрез галерия от текст и изображения. Бутоните вляво и вдясно на съдържанието позволяват връщане към предишната и преминаване към следващата част от историята на играта. </p>
+      <h3>Работа със секцията с правила</h3>
+      <p>Системата позволява изучаване на правилата на играта чрез текстово описание и интерактивни примери. Трябва да изпълните текстовите инструкции върху дъската. След изпълнение на инструкциите, продължете с бутона “Напред”.</p>
+      <h3>Игра с приятел</h3>
+      <p>Софтуерът позволява режим за игра с приятел. В него няма никакви ограничения на поредността на ходовете. Това позволява и самостоятелни занимания при липса на партньор в играта. Системата дава възможност за автоматично завъртане на дъската, при което след всеки ход на играча дъската ще се завърта, с цел да се симулира максимално обстановката в реална среда.</p>
+      <h3>Смяна на темата</h3>
+      <p>От иконата във фиксираната лента за навигация може да смените темата на уебсайта от светла на тъмна и обратно.</p>
     </div>
 
 
